# VisIVOServer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt_API  CMakeLists.txt_local  FindCfitsio.cmake  HowToCreateAFunction  Makefile  NotexManuale  README  README.md  VisIVO.HowtoBuild  VisIVOServerGLite.HowToBuild  base64.cpp  base64.h  cmake_install.cmake  mainFilter.cpp  mainImporter.cpp  mainUtils.cpp  mainViewer.cpp  parameterFile  parameterFileFilters  parameterFileImporter  parameterFileViewer  selR0.0000.bin.head  svn-commit.tmp  ugo1.par  visivo.h  visivodef.h  visivofil.cpp  visivoimp.cpp  visivoserver.h  visivoset.cpp  visivoview.cpp
Utils/: CMakeLists.txt  base64.cpp  base64.h  color.cpp  color.h  commandline.cpp  commandline.h  extendedglyph3d.cpp  extendedglyph3d.h  glitegw.cpp  glitegw.h  historyXmlWriter.cc  historyXmlWriter.h  luteditor.cpp  luteditor.h  optionssetter.cpp  optionssetter.h  parfile.h  startFilter.cpp  startFilter.h  visivoutils.cpp  visivoutils.h
VisIVOFilters/Filters/: CMakeLists.txt  CMakeLists.txt_ahf  CMakeLists.txt_o  CMakeLists.txt_ugo  CMakeLists.txt_ugp  DeveloperNotes.txt  Doxyfile  VisIVOFilters.kdev4  VisIVOFiltersConfigure.h  VisIVOFiltersConfigure.h.in  diff1  example.bin.head  fparser.cpp  fparser.h  fpconfig.h  fpoptimizer.cpp  main.cpp  parameterFile  parametersparser.cpp  parametersparser.h  pippo  vsLine.cpp  vsLine.h  vsVector.cpp  vsVector.h  vsVoxel.cpp  vsVoxel.h  vsaddidop.cpp  vsaddidop.h  vsahfhalogalaxyextop.cpp  vsahfhalogalaxyextop.h  vsahfhalolistop.cpp  vsahfhalolistop.h  vsappend.cpp  vsappend.h  vschangecolnameop.cpp  vschangecolnameop.h  vsclustercellop.cpp  vsclustercellop.h  vscoarsevolumeop.cpp  (+72 more)
VisIVOFilters/Filters/.kdev4/: VisIVOFilters.kdev4
VisIVOFilters/Filters/AHFstep/: AHFstep.c  AHFstep.h  CMakeLists.txt  Makefile  comm.c  comm.h  common.c  common.h  define.h  main_AHFstep.c  main_AHFstep.h  param.h  startrun.c  startrun.h  step.c  step.h  tdef.h
VisIVOFilters/Filters/AHFstep/libahf/: CMakeLists.txt  Makefile  ahf_gridinfo.c  ahf_halos.c  ahf_halos.h  ahf_halos_sfc.c  ahf_halos_sfc.h
VisIVOFilters/Filters/AHFstep/libgravity/: CMakeLists.txt  Makefile  fft_potential.c  forces.c  forces.h  gravity.h  gs.c  mond.c  mond.h  residual.c  solve_gravity.c  trunc_err.c
VisIVOFilters/Filters/AHFstep/libgrids/: CMakeLists.txt  Makefile  coarse_to_fine.c  fine_to_coarse.c  generate_grids.c  generate_grids.h  get_nnodes.c  go_down.c  go_up.c  go_up.h  grids.h  refine_grid.c  store_refs.c  store_refs.h
VisIVOImporter/Importers/: .directory  CMakeLists.txt  CMakeLists.txt_ugo  ParticleVolume.C  abstractsource.cpp  abstractsource.h  asciisource.cpp  asciisource.h  binsource.cpp  binsource.h  csvsource.cpp  csvsource.h  fitsimagesource.cpp  fitsimagesource.h  fitstablesource.cpp  fitstablesource.h  flysource.cpp  flysource.h  gadgetsource.cpp  gadgetsource.h  hdf5particles.c  hdf5source.cpp  hdf5source.h  muportalsource.cpp  muportalsource.h  ramsessource.cpp  ramsessource.h  rawgridsource.cpp  rawgridsource.h  rawpointssource.cpp  rawpointssource.h  vialacteasource.cpp  vialacteasource.h  vosource.cpp  vosource.h  vosourcenew.cpp  vosourcenew.h  vosourcenew.h_ori  xmlsource.cpp  xmlsource.h
VisIVOUtils/: CMakeLists.txt  main.cpp  vscreategenericslices.cpp  vscreategenericslices.h  vscreatepath.cpp  vscreatepath.h  vscreateslices.cpp  vscreateslices.h  vsloadhistory.cpp  vsloadhistory.h  vstextcol.cpp  vstextcol.h  vsutils.cpp  vsutils.h  vuparametersparser.cpp  vuparametersparser.h
VisIVOViewer/Splotch/: AUTHORS  Makefile  README  Splotch5-generic  SplotchUserGuide.doc  demo.par  explore_simulation.par  splotch.par  splotch_mil2.par  vis.par
VisIVOViewer/Splotch/booster/: CMakeLists.txt  m_rotation.cc  mesh_creator.cc  mesh_vis.h  p_selector.cc  randomizer.cc
VisIVOViewer/Splotch/c_utils/: CMakeLists.txt  walltime_c.c  walltime_c.h
VisIVOViewer/Splotch/cuda/: CMakeLists.txt  CuPolicy.cpp  CuPolicy.cu  CuPolicy.h  CuRender.cu  CuRender.h  VTimer.cpp  VTimer.h  deviceQuery.cu  sample.par  splotch.cu  splotch_cu_data.h  splotch_cuda.h  splotch_cuda2.cc  splotch_cuda2.cc_ORIGIN.cc  splotch_cuda2.h  splotch_kernel.cu
VisIVOViewer/Splotch/cxxsupport/: CMakeLists.txt  announce.cc  cxxutils.cc  mpi_support.cc  mpi_support.h  sort_utils.h  sse_utils.h  sse_utils_cxx.h  string_utils.cc  string_utils.h  walltimer.cc
VisIVOViewer/Splotch/galaxy/: Box_Muller.cxx  CalculateColours.cxx  CalculateDensity.cxx  Galaxy.cxx  Galaxy.h  GaussRFunc.cxx  GlobularCluster.cxx  README  ReadBMP.cxx  ReadImages.cxx  demo.par
VisIVOViewer/Splotch/kernel/: CMakeLists.txt  colourmap.h
VisIVOViewer/Splotch/opencl/: splotch.cpp
VisIVOViewer/Splotch/previewer/: Previewer.cpp  Previewer.h
VisIVOViewer/Splotch/reader/: CMakeLists.txt  bin_reader.cc  bin_reader_mpi.cc  enzo_reader.cc  gadget_hdf5_reader.cc  gadget_reader.cc  galaxy_reader.cc  h5part_reader.cc  hdf5_reader.cc  mesh_reader.cc  millenium_reader.cc  ramses_reader.cc  ramses_reader.h  reader.h  tipsy_reader.cc  visivo_reader.cc
VisIVOViewer/Splotch/splotch/: CMakeLists.txt  parallel_sort.c  parallel_sort.cc  scenemaker.cc  scenemaker.h  splotch.cc  splotch_host.cc  splotch_host.h  splotchutils.cc  splotchutils.h
VisIVOViewer/Splotch/writer/: CMakeLists.txt  write_ppm.cc  write_tga.cc  writer.h
VisIVOViewer/pipe/: CMakeLists.txt  diff1  isosurfacepipe.cpp  isosurfacepipe.h  isosurfacepipe.h_ori  pipe.cpp  pipe.h  pipe.h_new  pipe_run.cpp  pipe_run.h  pointspipe.cpp  pointspipe.h  pointssmoothpipe.cpp  pointssmoothpipe.h  slicepipe.h_ori  slicerpipe.cpp  slicerpipe.h  smoo  splotchpipe.cpp  splotchpipe.h  splotchpipe.h_ori  splotchpipecamera.cpp  splotchpipecamera.h_mod  splotchpipecamera.h_ori  vectorpipe.cpp  vectorpipe.h  volumepipe.cpp  volumepipe312.cpp  volumepiperev16.cpp  volumeslicer.cpp  volumeslicer.h  vtkimagepipe.cpp  vtkimagepipe.h
VisIVOViewer/pipe/save/: pipe.cpp  volumepipe.cpp  volumepipe.h
test/: Makefile  myprogram.c
testGLite/: Makefile  VisIVO.jdl  VisIVOAPI.jdl  VisIVO_testGLite.sh  cycle.par  job_id  myprogram.c  start.sh
(+251 files in other folders)
